--- a/templates/argoapp.yaml
+++ b/templates/argoapp.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ .Release.Name }}
-  namespace: "argocd"
+  namespace: "krateo-system"
   labels:
     {{- include "krateo-test-nginx-composition.labels" . | nindent 4 }}
 spec:
