fix: replace values

--- a/templates/gitclone-replace-values.yaml
+++ b/templates/gitclone-replace-values.yaml
@@ -7,5 +7,5 @@ metadata:
 data:
   values: |
     { 
-      "websiteTitle": "{{ .Values.website.title }}",
+      "websiteTitle": "{{ .Values.website.title }}"
     }
