fix: git repo path

--- a/templates/argoapp.yaml
+++ b/templates/argoapp.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/fsteccanella/krateo-test-gitops-repo
     targetRevision: main
-    path: /{{ .Values.website.path | kebabcase}}/{{ .Values.website.title | kebabcase}}
+    path: {{  printf "%s/%s" .Values.website.path .Values.website.title | kebabcase }}
   destination:
     server: https://kubernetes.default.svc
     namespace: {{  printf "%s-%s" .Values.website.path .Values.website.title | kebabcase | trunc 63 | trimSuffix "-" }}
