--- a/templates/gitclone-replace-values.yaml
+++ b/templates/gitclone-replace-values.yaml
@@ -7,5 +7,7 @@ metadata:
 data:
   values: |
     { 
+      "cluster": "{{ .Values.cluster | kebabcase }}",
+      "app": "{{ .Values.app | kebabcase }}",
       "websiteTitle": "{{ .Values.website.title }}"
     }
